--- a/NBL.Models/NBL.Models.csproj
+++ b/NBL.Models/NBL.Models.csproj
@@ -183,6 +183,7 @@
     <Compile Include="ViewModels\Orders\DeliveredRefModel.cs" />
     <Compile Include="ViewModels\Orders\TempOrderedProduct.cs" />
     <Compile Include="ViewModels\Orders\ViewCreateRetailSaleModel.cs" />
+    <Compile Include="ViewModels\Orders\ViewDisributedProduct.cs" />
     <Compile Include="ViewModels\Orders\ViewSoldProduct.cs" />
     <Compile Include="ViewModels\Productions\ProductionSummary.cs" />
     <Compile Include="ViewModels\Productions\ViewDispatchChalan.cs" />
