--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8095,6 +8095,8 @@
     <Content Include="Areas\Sales\Views\OrderSalesAdmin\ApprovedOrderList.cshtml" />
     <Content Include="Areas\Sales\Views\Client\ViewClientProfile.cshtml" />
     <Content Include="Areas\Production\Views\Transfer\TripDetails.cshtml" />
+    <Content Include="Areas\Services\Views\Replace\Cancel.cshtml" />
+    <Content Include="Areas\Sales\Views\Replace\DeliveredList.cshtml" />
     <None Include="Properties\PublishProfiles\Demo.pubxml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
