--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8118,6 +8118,8 @@
     <Content Include="Areas\Services\Views\WarrantyBattery\ChargeReport.cshtml" />
     <Content Include="Areas\Services\Views\WarrantyBattery\Forward.cshtml" />
     <Content Include="Areas\Services\Views\WarrantyBattery\ProductInChargeSection.cshtml" />
+    <Content Include="Areas\Services\Views\WarrantyBattery\ProductInDisChargeSection.cshtml" />
+    <Content Include="Areas\Services\Views\WarrantyBattery\DisChargeReport.cshtml" />
     <None Include="Properties\PublishProfiles\Demo.pubxml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
