Sales Return entry and approve by Sales manager done

--- a/NBL.Models/NBL.Models.csproj
+++ b/NBL.Models/NBL.Models.csproj
@@ -223,6 +223,7 @@
     <Compile Include="ViewModels\Requisitions\ViewRequisitionModel.cs" />
     <Compile Include="EntityModels\Requisitions\RequisitionModel.cs" />
     <Compile Include="ViewModels\Returns\ViewEntryReturnModel.cs" />
+    <Compile Include="ViewModels\Returns\ViewReturnModel.cs" />
     <Compile Include="ViewModels\Returns\ViewReturnProductModel.cs" />
     <Compile Include="ViewModels\Returns\ViewReturnReceiveModel.cs" />
     <Compile Include="ViewModels\Scraps\ViewCreateScrapModel.cs" />
