Sales return approval by Sales admin done

--- a/NBL.Models/NBL.Models.csproj
+++ b/NBL.Models/NBL.Models.csproj
@@ -225,6 +225,7 @@
     <Compile Include="ViewModels\Requisitions\ViewRequisitionModel.cs" />
     <Compile Include="EntityModels\Requisitions\RequisitionModel.cs" />
     <Compile Include="ViewModels\Returns\ViewEntryReturnModel.cs" />
+    <Compile Include="ViewModels\Returns\ViewReturnDetails.cs" />
     <Compile Include="ViewModels\Returns\ViewReturnModel.cs" />
     <Compile Include="ViewModels\Returns\ViewReturnProductModel.cs" />
     <Compile Include="ViewModels\Returns\ViewReturnReceiveModel.cs" />
