--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8143,6 +8143,9 @@
     <Content Include="Areas\SuperAdmin\Views\Home\DeliveredBarCodeList.cshtml" />
     <Content Include="Areas\SuperAdmin\Views\Home\Invoice.cshtml" />
     <Content Include="Areas\AccountsAndFinance\Views\AccountManager\ActivetedReceivableList.cshtml" />
+    <Content Include="Areas\Sales\Views\Return\PendingReturnList.cshtml" />
+    <Content Include="Areas\Sales\Views\Return\Receive.cshtml" />
+    <Content Include="Areas\SuperAdmin\Views\Home\SearchClient.cshtml" />
     <None Include="Properties\PublishProfiles\Demo.pubxml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
