--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8146,6 +8146,8 @@
     <Content Include="Areas\Sales\Views\Return\PendingReturnList.cshtml" />
     <Content Include="Areas\Sales\Views\Return\Receive.cshtml" />
     <Content Include="Areas\SuperAdmin\Views\Home\SearchClient.cshtml" />
+    <Content Include="Areas\Sales\Views\Home\UpdateBasicInfo.cshtml" />
+    <Content Include="Areas\Sales\Views\Home\UpdateEducationalInfo.cshtml" />
     <None Include="Properties\PublishProfiles\Demo.pubxml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
