--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8185,6 +8185,7 @@
     <Content Include="Areas\Sales\Views\Return\PendingGeneralReturnList.cshtml" />
     <Content Include="Areas\SuperAdmin\Views\Home\CollectionList.cshtml" />
     <Content Include="Areas\SuperAdmin\Views\Home\ChangePassword.cshtml" />
+    <Content Include="Areas\Sales\Views\Return\ReceiveGeneralReturn.cshtml" />
     <None Include="Properties\PublishProfiles\Demo.pubxml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
